server/src/search/search_executor/snapshots/navigatum_server__search__search_executor__test__good_queries-4.snap
---
source: src/search/search_executor/mod.rs
description: ""
expression: actual
info: "'interims' should get 'garching-interims' in 1 results"
---
- facet: sites_buildings
  entries:
    - id: garching-interims
      type: area
      name: "\u0019Interimshörsäle\u0017"
      subtext: Gebiet / Gruppe von Gebäuden
    - id: "5539"
      type: building
      name: "\u0019Interims\u0017-Tentomax MW"
      subtext: Gebäude
    - id: "5416"
      type: building
      name: "\u0019Interimshörsäle\u0017 II, Jürgen Manchot-Hörsaalgebäude"
      subtext: Gebäude
    - id: "5620"
      type: building
      name: "\u0019Interimshörsäle\u0017 I"
      subtext: Gebäude
  n_visible: 4
  estimatedTotalHits: 4
- facet: rooms
  entries:
    - id: 5416.01.003
      type: room
      name: "5416.01.003 (Hörsaal 2,  \"\u0019Interims\u0017 II\")"
      subtext: "garching, Interims II"
      subtext_bold: 003@5416
    - id: 5620.01.101
      type: room
      name: "5620.01.101 (Hörsaal 1,  \"\u0019Interims\u0017 I\")"
      subtext: "garching, Interims I"
      subtext_bold: 101@5620
    - id: 5620.01.102
      type: room
      name: "5620.01.102 (Hörsaal 2,  \"\u0019Interims\u0017 I\")"
      subtext: "garching, Interims I"
      subtext_bold: 102@5620
    - id: 5416.01.004
      type: room
      name: "5416.01.004 (Hörsaal 1,  Jürgen-Manchot-Hörsaal)"
      subtext: "garching, Interims II"
      subtext_bold: 004@5416
    - id: 5539.EG.001A
      type: room
      name: "5539.EG.001A (Hörsaal 1A,  \"Zelt\")"
      subtext: "garching, Interims III"
      subtext_bold: 0.001A@5539
    - id: 5539.EG.001B
      type: room
      name: "5539.EG.001B (Hörsaal 1B,  \"Zelt\")"
      subtext: "garching, Interims III"
      subtext_bold: 0.001B@5539
  n_visible: 6
  estimatedTotalHits: 47
