server/src/search/search_executor/snapshots/navigatum_server__search__search_executor__test__good_queries-9.snap
---
source: src/search/search_executor/mod.rs
description: ""
expression: actual
info: "'znn' should get '5115' in 1 results"
---
- facet: sites_buildings
  entries:
    - id: "5115"
      type: building
      name: "Zentrum für Nanotechnologie & -materialien (\u0019ZNN\u0017)"
      subtext: Gebäude
    - id: "5116"
      type: building
      name: "Trafostation des \u0019ZNN\u0017"
      subtext: Gebäude
  n_visible: 2
  estimatedTotalHits: 2
- facet: rooms
  entries:
    - id: 5115.EG.001
      type: room
      name: 5115.EG.001 (Seminarraum)
      subtext: "garching, Zentrum für Nanotechnologie & -materialien (ZNN)"
      subtext_bold: 0.001@5115
    - id: 5115.01.008
      type: room
      name: 5115.01.008 (Kopierraum)
      subtext: "garching, Zentrum für Nanotechnologie & -materialien (ZNN)"
      subtext_bold: 1.008@5115
    - id: 5115.01.011
      type: room
      name: 5115.01.011 (Chemie Labor)
      subtext: "garching, Zentrum für Nanotechnologie & -materialien (ZNN)"
      subtext_bold: 1.011@5115
    - id: 5115.01.011A
      type: room
      name: 5115.01.011A (Chemie Labor)
      subtext: "garching, Zentrum für Nanotechnologie & -materialien (ZNN)"
      subtext_bold: 1.011A@5115
    - id: 5115.01.019
      type: room
      name: 5115.01.019 (Spektroskopie)
      subtext: "garching, Zentrum für Nanotechnologie & -materialien (ZNN)"
      subtext_bold: 1.019@5115
    - id: 5115.01.020
      type: room
      name: 5115.01.020 (Spektroskopie)
      subtext: "garching, Zentrum für Nanotechnologie & -materialien (ZNN)"
      subtext_bold: 1.020@5115
    - id: 5115.01.021
      type: room
      name: 5115.01.021 (Spektroskopie)
      subtext: "garching, Zentrum für Nanotechnologie & -materialien (ZNN)"
      subtext_bold: 1.021@5115
    - id: 5115.01.022
      type: room
      name: 5115.01.022 (Technik)
      subtext: "garching, Zentrum für Nanotechnologie & -materialien (ZNN)"
      subtext_bold: 1.022@5115
  n_visible: 8
  estimatedTotalHits: 141
